<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="sliding_home_page">首页</string>
    <string name="sliding_mall">许鲜商城</string>
    <string name="sliding_my_order">我的订单</string>
    <string name="sliding_account_number">账号</string>
    <string name="sliding_message">消息</string>
    <string name="sliding_help">帮助</string>
    <string name="version_update">版本更新</string>
    <string name="account">帐号</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="app_name">许鲜pro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="china_mobile">中国移动</string>
    <string name="mzw_pull_upload">正在加载中..</string>
    <string name="mzw_click_reopen_date">点击重新获取</string>
    <string name="mzw_pull_finally">已经是最后一个</string>
    <string name="mzw_pull_refresh">下拉刷新...</string>
    <string name="china_unicom">中国联通</string>
    <string name="china_telecom">中国电信</string>
    <string name="mzw_share">分享</string>
    <string name="anim_slide">Slide Up</string>
    <string name="login_user_edit_hint">请输入手机号码/用户名/邮箱</string>
    <string name="login_mail_edit_hint">邮箱</string>
    <string name="login_password_edit_hint">密码</string>
    <string name="login_user_hint">用户名</string>
    <string name="login_title">登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="registered_users">注册用户</string>
    <string name="account_details">帐号详情</string>
    <string name="messager_title">消息</string>
    <string name="xuxian_mall">许鲜商城</string>
    <string name="retrieve_password">找回密码</string>
    <string name="help_list_title">帮助</string>
    <string name="personal_center_action_title">账号</string>
    <string name="register_title">注册</string>
    <string name="find_title">忘记密码</string>
    <string name="submit">提交</string>
    <string name="new_shop_hint">我们最新的一个提货点已经开到了</string>
    <string name="delivery_point_teb">提货点</string>
    <string name="classify_teb">分类</string>
    <string name="mzw_let_go_refresh">放开以刷新...</string>
    <string name="mzw_already_finish">已经加载完毕- DONE</string>
    <string name="your_nearest_title">离你最近的提货点</string>
    <string name="select_an_existing">选择现有提货点</string>
    <string name="shop_site_hint">抱歉您的附近还未设提货点，请选择以上现有提货点，我们会尽快将提货点开设到您的附近。</string>
    <string name="an_existing">现有提货点</string>
    <string name="launch_shop_regret_hint">抱歉您的附近还未建设提货点，您可以使用现有提货点。</string>
    <string name="detail_price_text">产品价格:￥%1$s/份</string>
    <string name="indent_price_text">￥%1$s</string>
    <string name="detail_market_price_text">市场价:￥%1$s</string>
    <string name="second">%1$s秒</string>
    <string name="list_axe_text">￥%1$s/份</string>
    <string name="list_axe_text_03">%1$s份</string>
    <string name="list_axe_text_02">￥%1$s</string>
    <string name="reloading">重新加载</string>
    <string name="shopping_cart_title">购物车</string>
    <string name="order_code_title">提货码:%1$s</string>
    <string name="order_number_title">订单号:%1$s</string>
    <string name="phone_number_title">手机号:%1$s</string>
    <string name="account_format_hint">密码必须是字母或数字</string>
    <string name="account_length_hint">账号或密码长度应该是5-15位的字母或数字</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="shop_hint">商品已加入购物车</string>
    <string name="empty_cart">变更提货点没结账的商品需要重新添加购物车</string>
    <string name="login_hint_not_filled_mail">您还未填写邮箱</string>
    <string name="login_hint_password_sendto_mail">您的重置信息已经发送到您的邮箱，请查收</string>
    <string name="login_hint_wrong_password">密码错误</string>
    <string name="login_hint_not_filled_password">您还未填写密码</string>
    <string name="login_hint_wrong_mail">请填写正确的邮箱</string>
    <string name="login_hint_not_filled_uiserid">用户名或密码不能为空</string>
    <string name="login_hint_register_succeed">注册成功</string>
    <string name="login_hint_length_err">密码长度应该是6-15位的字母或数字</string>
    <string name="login_hint_sail_go">您的密码已经发到您的邮箱请查收</string>
    <string name="shopping_options_title">购物选项</string>
    <string name="indent_hint_title">您还未注册登录，请先注册吧</string>
    <string name="indent_hint_assistant_title">已有许鲜账号，请直接登录</string>
    <string name="verigication_title">您的手机号：</string>
    <string name="test_get_code">获取验证码</string>
    <string name="verification_code">验证码：</string>
    <string name="verification_phone_title">手机验证</string>
    <string name="insufficient_purchase_hint">当前剩余量为0，请请选择其他商品购买</string>
    <string name="phone_verification_hint">请输入正确的手机号码</string>
    <string name="go_shopping">去购物</string>
    <string name="alipay_title">支付宝</string>
    <string name="weixinpay">微信支付</string>
    <string name="mSixhourslist">极致新鲜</string>
    <string name="mGroupbuyinglistDto">团购</string>
    <string name="mGoodsshelfListDto">自营水果</string>
    <string name="mysy_list_title">买一送一</string>
    <string name="zk_list_title">折扣</string>
    <string name="hint">提示:</string>
    <string name="indent_cancel_order">取消订单</string>
    <string name="indent_order_paied">已付款</string>
    <string name="indent_order_dealing_with_the_refund">处理中</string>
    <string name="indent_order_not_pay">去付款</string>
    <string name="indent_order_refund">申请退款</string>
    <string name="index_ordes_expired">已过期</string>
    <string name="indent_order_have_refund">已退款</string>
    <string name="indent_hint">在您提货的时候请出示提货码和手机号</string>
    <string name="hint_time">提货时间</string>
    <string name="time_hint">11:00am-22:00pm</string>
    <string name="goods_buy">购买</string>
    <string name="remind_cancel">取消提醒</string>
    <string name="goods_price">原价:</string>
    <string name="goods_killdoing">进行中</string>
    <string name="goods_killundo">未开启</string>
    <string name="please_enter_the_phone_number_hint">请输入手机号码</string>
    <string name="please_enter_the_verification_code_hint">请输入验证码</string>
    <string name="next">下一步</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="verify_password">重复输入密码</string>
    <string name="to_complete_the_registration">完成注册</string>
    <string name="different_input_password_twice">输入两次密码不同</string>
    <string name="user_length_hint">2-20个字符，可以为字母，数字下划线和中文</string>
    <string name="direct_login">直接登录</string>
    <string name="okBtn">确定</string>
    <string name="cancelBtn">取消</string>
    <string name="empty">没有加载到数据!</string>
    <string name="loading">正在加载…</string>
    <string name="loading_login">正在登录…</string>
    <string name="loading_registered">正在注册…</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">放开加载更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次时间:</string>
    <string name="xlistview_header_hint_ready">松开加载</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="umeng_example_home_btn_analytics">Analytics</string>
    <string name="umeng_example_home_btn_xp">XP</string>
    <string name="umeng_example_home_btn_ad">Ads</string>
    <string name="umeng_example_home_btn_tools">Tools</string>
    <string name="umeng_example_home_btn_fb">Feedback</string>
    <string name="umeng_example_home_btn_update">Update</string>
    <string name="umeng_example_home_btn_plus">Socialize</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">Container</string>
    <string name="umeng_example_xp_home_btn_banner">Banner</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"Banner
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">Handler</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"Handler
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">Multi-Pages</string>
    <string name="umeng_example_xp_home_btn_wap">WebView</string>
    <string name="umeng_example_xp_home_btn_custom">Custom</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"WebView
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_push_header">"Push AD
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_textlink">Text Link</string>
    <string name="umeng_example_xp_home_btn_container_header">LargeImage</string>
    <string name="umeng_example_xp_home_handler_icons">"Icons
(UFP)"</string>
    <string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="actionbar_activity_not_found">Failed to open intent…</string>
    <string name="umeng_example_home_hint_wait">Coming soooooon</string>
    <string name="intro">The webview before show js call Umeng Analytics APIs</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="loding_dialog">正在加载</string>
    <string name="xian_pin">鲜拼</string>
    <string name="team_order" />
    <string name="my_order">我的订单</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="btn_enter">btn_guide_lijijinru_anniu</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">下载:</string>
    <string name="umeng_common_pause_notification_prefix">暂停:</string>
    <string name="umeng_common_start_download_notification">下载开始.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_icon">icon</string>
    <string name="umeng_fb_contact_info_hint">Email, msn, gtalk, or whatever we can find you.</string>
</resources>