<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20.0dip"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_login_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_edit_hint"
                android:imeOptions="actionNext"
                android:lines="1"
                android:padding="10.0dip"
                android:singleLine="true" />

            <EditText
                android:id="@+id/ed_login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:ems="10"
                android:hint="@string/login_password_edit_hint"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:padding="10.0dip"
                android:password="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_login_find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10.0dip"
                android:text="@string/forgot_password"
                android:textColor="@color/splash_green"
                android:textSize="@dimen/text_title_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_registered_users"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/selector_tv_go_shoppingcar"
                    android:text="@string/register_title"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_bg_green"
                    android:text="@string/login_title"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>